// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders with custom level 1`] = `
<header
  aria-level="1"
  className="eQlQti"
  role="heading"
>
  <span
    className="FlPQv jIDulM"
    style={Object {}}
  >
    
    <div
      className="hsAzII"
    >
      <div
        className="citbmJ"
      >
        <h1
          className="eMOVrO"
          color="blue"
          size={
            Object {
              "large": "bronto",
              "medium": "zetta",
              "small": "tera",
              "xLarge": undefined,
              "xSmall": "tera",
            }
          }
        >
          <span
            className="laAajU"
          >
            Generic
          </span>
           
          <span
            className="jlRdIN"
          >
            Header
          </span>
        </h1>
      </div>
    </div>
  </span>
</header>
`;

exports[`Header renders with default 1`] = `
<header
  aria-level="1"
  className="eQlQti"
  role="heading"
>
  <span
    className="FlPQv jIDulM"
    style={Object {}}
  >
    
    <div
      className="hsAzII"
    >
      <div
        className="citbmJ"
      >
        <h2
          className="klyBGR"
          size={
            Object {
              "large": "bronto",
              "medium": "zetta",
              "small": "tera",
              "xLarge": undefined,
              "xSmall": "tera",
            }
          }
        >
          <span
            className="laAajU"
          >
            Generic
          </span>
           
          <span
            className="jlRdIN"
          >
            Header
          </span>
        </h2>
      </div>
    </div>
  </span>
</header>
`;

exports[`Header renders withOverlay 1`] = `
<header
  aria-level="1"
  className="eQlQti"
  role="heading"
>
  <span
    className="gradient--overlay FlPQv jIDulM"
    style={Object {}}
  >
    
    <div
      className="hsAzII"
    >
      <div
        className="citbmJ"
      >
        <h2
          className="klyBGR"
          size={
            Object {
              "large": "bronto",
              "medium": "zetta",
              "small": "tera",
              "xLarge": undefined,
              "xSmall": "tera",
            }
          }
        >
          <span
            className="laAajU"
          >
            Generic
          </span>
           
          <span
            className="jlRdIN"
          >
            Header
          </span>
        </h2>
      </div>
    </div>
  </span>
</header>
`;
